--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     username: root
-    password: 123456
+    password: mysqlycsys
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/study
+    url: jdbc:mysql://121.43.156.9:33060/jobduplicationcheck
 
 mybatis:
   #  mybatis mapper映射文件路径
